feat(style): use css modules

--- a/src/style.css
+++ b/src/style.css
@@ -278,47 +278,7 @@ a:focus {
 
 /* Custom classes */
 
-.body-top {
-  background-color: var(--color-top-background);
-}
-
-.body-blog-post {
-  background-color: #fff;
-}
-
-.global-header {
-  position: sticky;
-  z-index: -1;
-  top: 0;
-  width: calc(100vw - var(--scrollBarWidth));
-  height: 50vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-}
-
-.global-header-common {
-  display: flex;
-  justify-content: center;
-  background-color: #fff;
-  padding: 8rem 0 6rem;
-}
-
-.header-top {
-  margin: 0;
-  max-width: var(--maxWidth-wrapper);
-  display: flex;
-  justify-content: center;
-}
-
-.header-brand {
-  vertical-align: middle;
-  width: 18rem;
-}
-
-.global-nav-wrapper,
-.global-nav-wrapper-top {
+.global-nav-wrapper {
   position: fixed;
   top: 0;
   padding: 0.4rem;
@@ -328,584 +288,15 @@ a:focus {
   transition: opacity .5s;
 }
 
-.global-nav {
-  display: flex;
-  justify-content: space-between;
-  height: 32px;
-}
-
-.brand-icon {
-  pointer-events: auto;
-}
-
-/*
-Copyright (c) 2020 by Mikael Ainalem (https://codepen.io/ainalem/pen/LJYRxz)
-
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-*/
-.hamburger {
-  cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
-  transition: transform 400ms;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  pointer-events: auto;
-}
-
-.hamburger.active {
-  transform: rotate(45deg);
-}
-
-.hamburger .top {
-  stroke-dasharray: 40 160;
-}
-
-.hamburger .middle {
-  stroke-dasharray: 40 142;
-  transform-origin: 50%;
-  transition: transform 400ms;
-}
-
-.hamburger .bottom {
-  stroke-dasharray: 40 85;
-  transform-origin: 50%;
-  transition: transform 400ms, stroke-dashoffset 400ms;
-}
-
-.hamburger.active .top {
-  stroke-dashoffset: -64px;
-}
-
-.hamburger.active .middle {
-  transform: rotate(90deg);
-}
-
-.hamburger.active .bottom {
-  stroke-dashoffset: -64px;
-}
-
-.line {
-  fill: none;
-  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-  stroke: var(--color-brand);
-  stroke-width: 7.5;
-  stroke-linecap: round;
-}
-
-.menu-nav {
-  position: absolute;
-  width: calc(100vw - var(--scrollBarWidth));
-  height: 100vh;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  pointer-events: initial;
-  background: #fff;
-  transition: opacity .5s;
-}
-
-.menu-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.menu-nav li {
-  margin-bottom: var(--spacing-8);
-  transition: opacity .2s;
-}
-
-.menu-nav li:hover {
-  opacity: .5;
-}
-
-.menu-nav img {
-  height: 3rem;
-}
-
-.heading-common {
-  height: 3rem;
-}
-
 .global-main {
   background-color: #fff;
-}
-
-.global-main-top {
-  padding: 5vw 10vw;
-  min-height: 50vh;
-  background-color: var(--color-top-background);
-}
-
-.post-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  column-gap: 9vw;
-  row-gap: 5vw;
-  margin: 0;
-}
-
-.post-list-item {
-  margin-bottom: var(--spacing-8);
-  transition: opacity .2s;
-}
-
-.post-list-item:hover {
-  opacity: .5;
-}
-
-.post-list-item a {
-  text-decoration: none;
-  color: var(--color-text);
-}
-
-.post-list-item-image-wrapper {
-  padding: 20%;
-  background-color: #fff;
-}
-
-.post-list-item-image-wrapper img {
-  width: 100%;
-}
-
-.post-list-item section {
-  word-wrap: break-word;
-  padding-top: var(--spacing-4);
-}
-
-.post-list-item h2 {
-  font-size: var(--fontSize-2);
-  line-height: var(--lineHeight-normal);
-  margin-bottom: var(--spacing-2);
-  margin-top: var(--spacing-0);
-}
-
-.thumbnail-vector-space {
-  position: relative;
-  padding-bottom: 100%;
-}
-
-.thumbnail-vector {
-  position: absolute;
-  transition: opacity .5s;
-}
-
-.works-page {
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-2xl);
-  padding: var(--spacing-8) 5vw;
-  word-wrap: break-word;
-}
-
-.works-item-list {
-  display: grid;
-  grid-template-columns: 1fr;
-  row-gap: calc(var(--spacing-8) + 6vw);
-  padding: 0;
-  list-style: none;
-}
-
-.work-card {
-  display: block;
-  text-decoration: none;
-  text-align: center;
-  transition: opacity .2s;
-}
-
-.work-card:hover {
-  opacity: .5;
-}
-
-.work-card-title {
-  font-size: var(--fontSize-4);
-  margin-top: 0;
-  margin-bottom: var(--spacing-3);
-  text-decoration: underline;
-}
-
-.work-card-tag-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  list-style: none;
-  padding: 0;
-  margin-bottom: var(--spacing-1);
-  font-size: .9rem;
-  color: var(--color-text-light);
-}
-
-.work-card-tag-list li:not(:first-of-type)::before {
-  content: "/";
-  padding: 0 .5rem;
-}
-
-.work-card-tag {
-  margin: 0;
-}
-
-.archive-page {
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-archive);
-  padding: var(--spacing-8) 5vw;
-  word-wrap: break-word;
-}
-
-.search-area {
-  margin-bottom: var(--spacing-12);
-  text-align: center;
-}
-
-.search-area-label-tag {
-  font-size: var(--fontSize-3);
-  margin-top: 0;
-}
-
-.search-area-input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.search-area-input input {
-  border: none;
-  border-bottom: 1px solid;
-  border-radius: 0;
-  background: transparent;
-  outline: none;
-}
-
-.search-button {
-  margin-left: -1.3rem;
-  width: 1rem;
-}
-
-.search-result-list {
-  display: grid;
-  word-wrap: break-word;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 4vw;
-  row-gap: 4vw;
-}
-
-.search-result-image-wrapper {
-  height: var(--thumbnail-size);
-  position: relative;
-}
-
-.search-result-image-wrapper img {
-  width: 100%;
-  border-radius: 1rem;
-  transition: opacity .5s;
-}
-
-.thumbnail-raster {
-  width: var(--thumbnail-size);
-}
-
-.thumbnail-vector-archive-space {
-  position: relative;
-  width: var(--thumbnail-size);
-  height: var(--thumbnail-size);
-  padding: 20%;
-  background: #fff;
-  border-radius: 1rem;
-}
-
-.thumbnail-vector-archive {
-  width: 100%;
-  transition: opacity .5s;
-}
-
-.search-result-item a {
-  display: flex;
-  text-decoration: none;
-  transition: opacity .2s;
-}
-
-.search-result-item a:hover{
-  opacity: .5;
-}
-
-.search-result-item section {
-  display: flex;
-  flex-direction: column;
-  margin-left: var(--spacing-4);
-}
-
-.search-result-item time {
-  margin-top: 1rem;
-  font-size: .9rem;
-  color: var(--color-text-light);
-}
-
-.search-result-item-title {
-  margin-top: var(--spacing-0);
-  margin-bottom: auto;
-  font-size: var(--fontSize-2);
-}
-
-.search-result-tag-list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0;
-  font-size: .9rem;
-  color: var(--color-text-light);
-}
-
-.search-result-tag-list li {
-  margin: 0;
-}
-
-.search-result-tag-list li:not(:first-of-type)::before {
-  content: "/";
-  padding: 0 .5rem;
-}
-
-.about-page {
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-2) var(--spacing-5);
-  word-wrap: break-word;
-}
-
-.about-page-socials {
-  display: flex;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.about-page-socials .social-svg-icon path {
-  fill: var(--color-brand);
-}
-
-.about-page-socials .social-svg-mask path {
-  fill: #fff;
-}
-
-.about-page-socials a {
-  transition: opacity .2s;
-  opacity: .5;
-}
-
-.about-page-socials a:hover {
-  opacity: 1;
-}
-
-.about-page-socials li:not(:first-of-type) {
-  margin-left: var(--spacing-1);
-}
-
-.blog-post {
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-16) var(--spacing-5);
-  word-wrap: break-word;
-}
-
-.blog-post-header-image {
-  width: 100%;
-  height: 100%;
-}
-
-.blog-post > header {
-  text-align: center;
-}
-
-.blog-post > header h1 {
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
-  text-align: left;
-}
-
-.blog-post > header time,
-.blog-post-tag-list {
-  margin-top: var(--spacing-2);
-  color: #999;
-}
-
-.blog-post-tag-list a {
-  transition: color .2s;
-}
-
-.blog-post-tag-list a:hover {
-  color: var(--color-text);
-}
-
-.blog-post nav {
-  margin: 3rem 0;
-}
-
-.blog-post nav header {
-  font-weight: var(--fontWeight-bold);
-}
-
-.blog-post nav hr {
-  height: 2px;
-  background-color: var(--color-brand);
-  margin: 1rem 0;
-}
-
-.blog-post nav a {
-  display: block;
-  color: var(--color-brand);
-  text-decoration: none;
-  transition: color .2s;
-}
-
-.blog-post nav a:hover {
-  color: var(--color-brand-transparent);
-}
-
-.blog-post nav section {
-  margin: 1rem 0;
-  text-align: initial;
-}
-
-.blog-post nav section ul {
-  list-style: none;
-  margin-left: 0;
-  padding: 0;
-}
-
-.blog-post nav section > ul {
-  margin: 2rem 0;
-}
-
-.blog-post nav section ul li {
-  position: relative;
-  margin-bottom: var(--spacing-4);
-}
-
-.blog-post nav section > ul > li {
-  padding-left: var(--spacing-6);
-  font-weight: var(--fontWeight-bold);
-}
-
-.blog-post nav section > ul > li::before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  top: 0.37rem;
-  width: 0.7rem;
-  height: 0.7rem;
-  background-color: var(--color-brand);
-  border-radius: 50%;
-}
-
-.blog-post nav section > ul > li > ul {
-  margin-top: var(--spacing-4);
-}
-
-.blog-post nav section > ul > li > ul > li {
-  font-weight: var(--fontWeight-normal);
-}
-
-.blog-post nav section > ul > li > ul > li::before {
-  content: "";
-  position: absolute;
-  left: -1.36rem;
-  top: 0.6rem;
-  width: 0.4rem;
-  height: 0.4rem;
-  background-color: var(--color-brand-transparent);
-  border-radius: 50%;
-}
-
-.blog-post-tag-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  list-style: none;
-  padding: 0;
-  font-size: .9rem;
-}
-
-.blog-post-tag-list li {
-  margin: 0;
-}
-
-.blog-post-tag-list li:not(:first-of-type)::before {
-  content: "/";
-  padding: 0 .5rem;
-}
-
-.blog-post-tag-list a {
-  text-decoration: none;
-  color: #999;
-}
-
-.share-footer {
-  display: flex;
-  justify-content: center;
-}
-
-.share-footer rect {
-  fill: #fff;
-}
-
-.share-footer path {
-  fill: var(--color-brand);
-}
-
-.share-footer button {
-  outline: none;
-  transition: opacity .2s;
-}
-
-.share-footer button:hover {
-  opacity: .5;
-}
-
-.share-footer button:not(:first-of-type) {
-  margin-left: var(--spacing-5);
 }
 
 .gatsby-highlight {
   margin-bottom: var(--spacing-8);
 }
 
-.not-found-page {
-  text-align: center;
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-2) var(--spacing-5);
-  word-wrap: break-word;
-}
-
-.not-found-page section {
-  margin-top: var(--spacing-4);
-}
-
 /* Media queries */
-
-@media (max-width: 100em) {
-  .post-list {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media (max-width: 64em) {
-  .post-list {
-    grid-template-columns: 1fr 1fr;
-    column-gap: 12vw;
-  }
-
-  .global-main-top {
-    padding: 7vw 10vw;
-  }
-}
 
 @media (max-width: 46em) {
   .global-nav-wrapper {
@@ -925,40 +316,6 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
   code {
     font-size: .8em !important;
-  }
-
-  .header-brand {
-    width: 14rem;
-  }
-
-  .global-header-common {
-    padding: 6rem 0 4rem;
-  }
-
-  .global-main-top {
-    padding: 15vw 15vw;
-  }
-
-  .post-list {
-    grid-template-columns: 1fr;
-    row-gap: 10vw;
-  }
-
-  .work-card-tag-list {
-    font-size: .8rem;
-  }
-
-  .search-result-list {
-    grid-template-columns: 1fr;
-  }
-
-  .search-result-item-title {
-    font-size: var(--fontSize-1);
-  }
-
-  .search-result-item time,
-  .search-result-tag-list {
-    font-size: .8rem;
   }
 }
 
