--- a/src/style.css
+++ b/src/style.css
@@ -135,7 +135,6 @@ h6 {
   font-weight: var(--fontWeight-normal);
   margin-top: var(--spacing-12);
   margin-bottom: var(--spacing-6);
-  line-height: var(--lineHeight-tight);
   letter-spacing: -0.025em;
   color: var(--color-heading);
 }
@@ -205,7 +204,7 @@ ol li {
 }
 
 li > p {
-  line-height: var(--lineHeight-tight);
+  line-height: var(--lineHeight-normal);
   margin-bottom: var(--spacing-2);
 }
 
