--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,8 @@
   --spacing-32: 8rem;
   --font-base: "Roboto", "Noto Sans JP", -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Hiragino Sans", "Noto Sans CJK JP", "Original Yu Gothic",
-    "Yu Gothic", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Sans Emoji";
+    "Yu Gothic", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Sans Emoji";
   --fontWeight-normal: 400;
   --fontWeight-medium: 500;
   --fontWeight-semibold: 600;
@@ -88,7 +89,7 @@
   /* PCCS dkg18 */
   --color-brand-transparent: rgba(34, 41, 51, 0.5);
   /* PCCS pp18 */
-  --color-selection: rgba(175, 192, 209, .5);
+  --color-selection: rgba(175, 192, 209, 0.5);
   /* PCCS ltp18 alpha:0.045 */
   --color-top-background: #f8fafc;
   --thumbnail-size: 7rem;
@@ -200,12 +201,13 @@ ol {
 ul li,
 ol li {
   padding-left: var(--spacing-0);
-  margin-bottom: var(--spacing-2);
+  margin-bottom: var(--spacing-1);
+  line-height: var(--lineHeight-loose);
 }
 
 li > p {
   line-height: var(--lineHeight-normal);
-  margin-bottom: var(--spacing-2);
+  margin-bottom: var(--spacing-1);
 }
 
 li *:last-child {
@@ -214,7 +216,7 @@ li *:last-child {
 
 li > ul {
   margin-left: var(--spacing-8);
-  margin-top: var(--spacing-2);
+  margin-top: var(--spacing-1);
 }
 
 blockquote {
@@ -223,7 +225,6 @@ blockquote {
   margin-right: var(--spacing-8);
   padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
   border-left: var(--spacing-1) solid var(--color-primary);
-  font-size: var(--fontSize-2);
   font-style: italic;
   margin-bottom: var(--spacing-8);
 }
@@ -244,7 +245,7 @@ table thead tr th {
 }
 
 code {
-  font-size: .9em !important;
+  font-size: 0.9em !important;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", Meiryo, monospace !important;
   word-wrap: break-word !important;
 }
@@ -284,7 +285,7 @@ a:focus {
   z-index: 1;
   width: calc(100vw - var(--scrollBarWidth));
   pointer-events: none;
-  transition: opacity .5s;
+  transition: opacity 0.5s;
 }
 
 .global-main {
@@ -334,12 +335,12 @@ a:focus {
   }
 
   code {
-    font-size: .8em !important;
+    font-size: 0.8em !important;
   }
 }
 
 .is-hidden {
   visibility: hidden;
   opacity: 0;
-  transition: opacity .5s, visibility 0s .5s !important;
+  transition: opacity 0.5s, visibility 0s 0.5s !important;
 }
