build: update gatsby to v3
Refs #9

--- a/src/styles/templates/blog-post.module.css
+++ b/src/styles/templates/blog-post.module.css
@@ -123,6 +123,10 @@
   color: #999;
 }
 
+.blogPostBody > p {
+  white-space: pre-line;
+}
+
 @media (hover: hover) {
   .blogPostTagList a:hover {
     color: var(--color-text);
