--- a/src/styles/components/ShareFooter.module.css
+++ b/src/styles/components/ShareFooter.module.css
@@ -13,7 +13,7 @@
 
 .shareFooter button {
   outline: none;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .shareFooter button:not(:first-of-type) {
@@ -22,6 +22,6 @@
 
 @media (hover: hover) {
   .shareFooter button:hover {
-    opacity: .5;
+    opacity: 0.5;
   }
 }
