--- a/src/styles/pages/about.module.css
+++ b/src/styles/pages/about.module.css
@@ -22,8 +22,8 @@
 }
 
 .aboutPageSocials a {
-  transition: opacity .2s;
-  opacity: .5;
+  transition: opacity 0.2s;
+  opacity: 0.5;
 }
 
 .aboutPageSocials li:not(:first-of-type) {
